--- a/Client/App.config
+++ b/Client/App.config
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
+  <connectionStrings>
+    <add name="NServiceBus/Transport" connectionString="host=rabbit" />
+  </connectionStrings>
+  <runtime>
+    <gcServer enabled="true" />
+  </runtime>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
 </configuration>
