--- a/Server/App.config
+++ b/Server/App.config
@@ -1,6 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
+  <appSettings>
+    <add key="PrefetchCount" value="1024" />
+    <add key="ConsumerCount" value="1" />
+    <!--<add key="ConsumerCount" value="32" />-->
+    <add key="Concurrency" value="32" />
+  </appSettings>
+  <connectionStrings>
+    <add name="NServiceBus/Transport" connectionString="host=rabbit" />
+  </connectionStrings>
+  <runtime>
+    <gcServer enabled="true" />
+  </runtime>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
 </configuration>
