--- a/Server/App.config
+++ b/Server/App.config
@@ -1,9 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="PrefetchCount" value="96" />
-    <add key="ConsumerCount" value="1" />
-    <!--<add key="ConsumerCount" value="32" />-->
+    <add key="PrefetchMultiplier" value="3" />
     <add key="Concurrency" value="32" />
   </appSettings>
   <connectionStrings>
@@ -11,12 +9,6 @@
   </connectionStrings>
   <runtime>
     <gcServer enabled="true" />
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="RabbitMQ.Client" publicKeyToken="89e7d7c5feba84ce" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
-      </dependentAssembly>
-    </assemblyBinding>
   </runtime>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
