--- a/ServerV6/ServerV6.csproj
+++ b/ServerV6/ServerV6.csproj
@@ -11,9 +11,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="NServiceBus" Version="5.2.24" />
-    <PackageReference Include="NServiceBus.RabbitMQ" Version="3.5.1" />
-    <PackageReference Include="RabbitMQ.Client" Version="4.1.3" />
+    <Reference Include="System.Configuration" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="NServiceBus" Version="6.4.0" />
+    <PackageReference Include="NServiceBus.RabbitMQ" Version="4.4.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="5.0.1" />
   </ItemGroup>
 
 </Project>
