--- a/ClientV7/ClientV7.csproj
+++ b/ClientV7/ClientV7.csproj
@@ -12,9 +12,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="NServiceBus" Version="7.0.0-beta0001" />
+    <PackageReference Include="NServiceBus" Version="7.0.0-beta0005" />
     <PackageReference Include="NServiceBus.Newtonsoft.Json" Version="2.0.0-beta0001" />
-    <PackageReference Include="NServiceBus.RabbitMQ" Version="5.0.0-beta0029" />
+    <PackageReference Include="NServiceBus.RabbitMQ" Version="5.0.0-beta30-0009" />
     <PackageReference Include="RabbitMQ.Client" Version="5.0.1" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.4.0" />
   </ItemGroup>
